--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Compiled class file
-*.class
+# Compiled class file, leaving them in, so that the TA don't have to compile it again :)
+# *.class
 
 # Log file
 *.log
@@ -22,5 +22,5 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# bin folder
-bin/
+# bin folder, leaving this in too :)
+# bin/
